--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-# ベースとなるPDFのURL
-BASE_PDF_URL=FILLHERE
-
-# R2の設定
+BASE_PDF_PATH=./FILLHERE
 R2_BUCKET_NAME=FILLHERE
 R2_PUBLIC_URL=FILLHERE
+AWS_ACCESS_KEY_ID=FILLHERE
+AWS_SECRET_ACCESS_KEY=FILLHERE
+AWS_ENDPOINT_URL=FILLHERE
+AWS_REGION=FILLHERE
