--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,10 @@ actix-web = "4.11.0"
 actix-rt = "2.10"
 dotenvy = "0.15.7"
 pdf_signing = "0.3.0"
-uuid = { version = "1.18.1", features = ["v4"] }
+uuid = { version = "1.18.1", features = ["v4", "serde"] }
 tokio = { version = "1", features = ["full"] }
-reqwest = { version = "0.12", features = ["stream"] }
 aws-sdk-s3 = "1"
 aws-config = "1"
 anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-x509-certificate = "0.24"
-cryptographic-message-syntax = "0.27"
