--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ anyhow = "1.0.100"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 escpos = { version = "0.17", features = ["full"] }
+chrono = "0.4"
