--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 actix-web = "4.11.0"
+actix-cors = "0.7"
 actix-rt = "2.10"
 dotenvy = "0.15.7"
 pdf_signing = "0.3.0"
