--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,16 @@ edition = "2024"
 
 [dependencies]
 actix-web = "4.11.0"
+actix-cors = "0.7"
 actix-rt = "2.10"
 dotenvy = "0.15.7"
 pdf_signing = "0.3.0"
 uuid = { version = "1.18.1", features = ["v4", "serde"] }
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1.48.0", features = ["full"] }
 aws-sdk-s3 = "1"
 aws-config = "1"
 anyhow = "1.0.100"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
+escpos = { version = "0.17", features = ["full"] }
+chrono = "0.4"
